<resources>
    <string name="app_name">Planet Engineer 2020</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_register">Register</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_visitwebsite">Visit Website</string>
    <string name="menu_emergencycontact">Emergency Contact</string>
    <string name="menu_rateus">Rate Us</string>
    <string name="menu_developerzone">Developer Zone</string>
    <string name="menu_events">Events</string>
    <string name="menu_givefeedback">Give Feedback</string>
</resources>
