<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.lnct.planetengineer2020.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.lnct.planetengineer2020.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.lnct.planetengineer2020.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.lnct.planetengineer2020.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.lnct.planetengineer2020.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.lnct.planetengineer2020.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_register"
        android:name="com.lnct.planetengineer2020.ui.register.MainRegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/main_register_fragment"/>
    <fragment
        android:id="@+id/nav_visitwebsite"
        android:name="com.lnct.planetengineer2020.ui.visitwebsite.VisitwebsiteFragment"
        android:label="@string/menu_visitwebsite"
        tools:layout="@layout/visitwebsite_fragment"/>
    <fragment
        android:id="@+id/nav_events"
        android:name="com.lnct.planetengineer2020.ui.events.EventsFragment"
        android:label="Events"
        tools:layout="@layout/events_fragment"/>
    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.lnct.planetengineer2020.ui.aboutus.AboutUsFragment"
        android:label="About Us"
        tools:layout="@layout/about_us_fragment"/>
    <fragment
        android:id="@+id/nav_emergencycontact"
        android:name="com.lnct.planetengineer2020.ui.emergencycontact.EmergencycontactFragment"
        android:label="Emergency Contact"
        tools:layout="@layout/emergencycontact_fragment"/>
    <fragment
        android:id="@+id/nav_rateus"
        android:name="com.lnct.planetengineer2020.ui.rateus.RateusFragment"
        android:label="Rate Us"
        tools:layout="@layout/rateus_fragment"/>
    <fragment
        android:id="@+id/nav_givefeedback"
        android:name="com.lnct.planetengineer2020.ui.givefeedback.GivefeedbackFragment"
        android:label="Give Feedback"
        tools:layout="@layout/givefeedback_fragment"/>
    <fragment
        android:id="@+id/nav_developerzone"
        android:name="com.lnct.planetengineer2020.ui.developerzone.DeveloperzoneFragment"
        android:label="Developer Zone"
        tools:layout="@layout/developerzone_fragment"/>


</navigation>